<resources>
    <string name="app_name">Umbrella IoT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Home</string>
    <string name="nav_header_subtitle">A smarter way to life</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">KITCHEN</string>
    <string name="menu_slideshow">MASTER BEDROOM</string>
    <string name="menu_parent">PARENTS BEDROOM</string>
    <string name="menu_family">FAMILY BEDROOM</string>
    <string name="menu_outdoor">OUTDOOR</string>
    <string name="home_second">Home Second</string>
</resources>
