<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/hall"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/kitchen2"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/room1"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_parent"
            android:icon="@drawable/parentsroom"
            android:title="@string/menu_parent" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/familyroom"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_outdoor"
            android:icon="@drawable/outdoor"
            android:title="@string/menu_outdoor" />
    </group>

</menu>
